pin java version to 21 in ci